# sorting_networks

./: .gitignore  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  output.ods
examples/: CMakeLists.txt  generator.cpp
examples/web-generator/: CMakeLists.txt  generator.cpp
include/: network_sort.h  sorting_networks.h
